--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Information</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.2/xlsx.full.min.js"></script>
-  <script src="Y22script.js" async></script>
-
-    <style>
+    <script src="Y22script.js"></script>
+     <style>
         .top-section {
             text-align: center;
             margin-top: 10px;
