--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <button onclick="searchData()">Search</button>
     
     <br><br>
-    <p id="noSearchMessage" style="text-align: center;">Enter search terms to see results.</p>
+    <p id="noSearchMessage" style="text-align: center;">Loading data, please wait...</p>
 
     <div class="table-container">
         <table id="dataTable" border="1" style="display: none;">
