--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <br>
        <br>  
         <input type="text" id="searchInput2" placeholder="Enter Student University ID...">
-        <input type="text" id="searchInput3" placeholder="Enter Course Code...">
-        <input type="text" id="searchInput4" placeholder="Enter Name of the Course...">
+        <input type="text" id="searchInput3" placeholder="Enter Student Year...">
+        <input type="text" id="searchInput4" placeholder="Enter Course Code...">
         <input type="text" id="searchInput5" placeholder="Enter Course Bucket...">
         <input type="text" id="searchInput6" placeholder="Enter Semester...">
         <button onclick="searchData()">Search</button>
