--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <h2>Student Information</h2>
     </div>
     <br>
+    <p style="text-align: right;">Year Coordinator: . Dr Dokku Bhavana and Dr AV Prabu</p>
         <label for="searchInput1">Faculty Emp ID: </label>
         <input type="text" id="searchInput1" placeholder="Enter first search term...">
           <button onclick="searchData()">Search</button>
