--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
     <div class="top-section">
         <h1>KLEF (Deemed to be University)</h1>
         <h3>Department of Electronics and Communication Engineering</h3>
-        <h2>Student Information</h2>
+        <h2>Student Information
+        <p style="text-align: right;">Year Coordinator: Dr Dokku Bhavana and Dr AV Prabu</p>
+        </h2>
     </div>
     <br>
-    <p style="text-align: right;">Year Coordinator: . Dr Dokku Bhavana and Dr AV Prabu</p>
-        <label for="searchInput1">Faculty Emp ID: </label>
+       <label for="searchInput1">Faculty Emp ID: </label>
         <input type="text" id="searchInput1" placeholder="Enter first search term...">
           <button onclick="searchData()">Search</button>
     <br>
