--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Information</title>
+    <title>Y22 Student Information</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.2/xlsx.full.min.js"></script>
     <script src="Y22script.js" defer></script>
 
@@ -61,9 +61,9 @@
     <div class="top-section">
         <h1>KLEF (Deemed to be University)</h1>
         <h3>Department of Electronics and Communication Engineering</h3>
-        <h2>Student Information
-        <p style="text-align: right;">Year Coordinator: Dr Dokku Bhavana and Dr AV Prabu</p>
-        </h2>
+        <h2>Y22 Student Information</h2>
+       <h4> <p style="text-align: right;">Year Coordinator: Dr Dokku Bhavana and Dr AV Prabu</p>
+        </h4>
     </div>
     <br>
        <label for="searchInput1">Faculty Emp ID: </label>
