--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <div class="top-section">
         <h1>KLEF (Deemed to be University)</h1>
         <h3>Department of Electronics and Communication Engineering</h3>
-        <h2>Y22 Student Information</h2>
-       <h4> <p style="text-align: right;">Year Coordinator: Dr Dokku Bhavana and Dr AV Prabu</p>
-        </h4>
+        <h2>Y22 Student Information
+        <p style="text-align: right;">Year Coordinator: Dr Dokku Bhavana and Dr AV Prabu</p>
+        </h2>
     </div>
     <br>
        <label for="searchInput1">Faculty Emp ID: </label>
