--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h1>KLEF (Deemed to be University)</h1>
         <h3>Department of Electronics and Communication Engineering</h3>
         <h2>Y22 Student Information
-        <p style="text-align: right;">Year Coordinator: Dr Dokku Bhavana and Dr AV Prabu</p>
+        <p style="text-align: right;">Year Coordinator: Dr.D.Bhavana and Dr.A.V.Prabhu</p>
         </h2>
     </div>
     <br>
