--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <input type="text" id="searchInput4" placeholder="Search Semester">
     <input type="text" id="searchInput5" placeholder="Search CGPA">
     <input type="text" id="searchInput6" placeholder="Search Status">
+     <button onclick="searchData()">Search</button>
     </div>
     <br>
     <p id="noSearchMessage" style="text-align: center;">Enter search terms to see results.</p>
