--- a/index.html
+++ b/index.html
@@ -67,14 +67,18 @@
     </div>
     <br>
        <label for="searchInput1">Faculty Emp ID: </label>
-    <input type="text" id="searchInput1" placeholder="Search RegNo">
-    <input type="text" id="searchInput2" placeholder="Search Name">
-    <input type="text" id="searchInput3" placeholder="Search Department">
-    <input type="text" id="searchInput4" placeholder="Search Semester">
-    <input type="text" id="searchInput5" placeholder="Search CGPA">
-    <input type="text" id="searchInput6" placeholder="Search Status">
-     <button onclick="searchData()">Search</button>
-    </div>
+        <input type="text" id="searchInput1" placeholder="Enter first search term...">
+          <button onclick="searchData()">Search</button>
+    <br>
+       <br>  
+        <input type="text" id="searchInput2" placeholder="Enter Student University ID...">
+        <input type="text" id="searchInput3" placeholder="Enter Student Year...">
+        <input type="text" id="searchInput4" placeholder="Enter Course Code...">
+        <input type="text" id="searchInput5" placeholder="Enter Course Bucket...">
+        <input type="text" id="searchInput6" placeholder="Enter Semester...">
+        <button onclick="searchData()">Search</button>
+        <br>
+     </div>
     <br>
     <p id="noSearchMessage" style="text-align: center;">Enter search terms to see results.</p>
 
@@ -88,3 +92,4 @@
     </div>
 </body>
 </html>
+
