--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Y22 Student Information</title>
+    <title>Student Information</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.2/xlsx.full.min.js"></script>
     <script src="Y22script.js" defer></script>
 
@@ -61,12 +61,10 @@
     <div class="top-section">
         <h1>KLEF (Deemed to be University)</h1>
         <h3>Department of Electronics and Communication Engineering</h3>
-        <h2>Y22 Student Information
-        <p style="text-align: right;">Year Coordinator: Dr.D.Bhavana and Dr.A.V.Prabhu</p>
-        </h2>
+        <h2>Student Information</h2>
     </div>
     <br>
-       <label for="searchInput1">Faculty Emp ID: </label>
+        <label for="searchInput1">Faculty Emp ID: </label>
         <input type="text" id="searchInput1" placeholder="Enter first search term...">
           <button onclick="searchData()">Search</button>
     <br>
@@ -78,8 +76,11 @@
         <input type="text" id="searchInput6" placeholder="Enter Semester...">
         <button onclick="searchData()">Search</button>
         <br>
-     </div>
+       
+    </div>
+
     <br>
+
     <p id="noSearchMessage" style="text-align: center;">Enter search terms to see results.</p>
 
     <div class="table-container">
@@ -92,4 +93,3 @@
     </div>
 </body>
 </html>
-
