--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Information</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.2/xlsx.full.min.js"></script>
-    <script src="Y22script.js" defer></script>
 
     <style>
         .top-section {
@@ -64,22 +63,17 @@
         <h2>Student Information</h2>
     </div>
     <br>
-        <label for="searchInput1">Faculty Emp ID: </label>
-        <input type="text" id="searchInput1" placeholder="Enter first search term...">
-          <button onclick="searchData()">Search</button>
-    <br>
-       <br>  
-        <input type="text" id="searchInput2" placeholder="Enter Student University ID...">
-        <input type="text" id="searchInput3" placeholder="Enter Student Year...">
-        <input type="text" id="searchInput4" placeholder="Enter Course Code...">
-        <input type="text" id="searchInput5" placeholder="Enter Course Bucket...">
-        <input type="text" id="searchInput6" placeholder="Enter Semester...">
-        <button onclick="searchData()">Search</button>
-        <br>
-       
-    </div>
-
-    <br>
+    <label for="searchInput1">Faculty Emp ID: </label>
+    <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID">
+    <button onclick="searchData()">Search</button>
+    <br><br>
+    <input type="text" id="searchInput2" placeholder="Enter Student University ID">
+    <input type="text" id="searchInput3" placeholder="Enter Student Year">
+    <input type="text" id="searchInput4" placeholder="Enter Course Code">
+    <input type="text" id="searchInput5" placeholder="Enter Course Bucket">
+    <input type="text" id="searchInput6" placeholder="Enter Semester">
+    <button onclick="searchData()">Search</button>
+    <br><br>
 
     <p id="noSearchMessage" style="text-align: center;">Enter search terms to see results.</p>
 
@@ -91,5 +85,109 @@
             <tbody id="tableBody"></tbody>
         </table>
     </div>
+
+    <script>
+        async function fetchExcelData() {
+            try {
+                const url = "https://raw.githubusercontent.com/sureshkoumar11/Y22_Student_Info/main/data.xlsx"; 
+                const response = await fetch(url);
+                if (!response.ok) throw new Error("Failed to fetch Excel file");
+
+                const data = await response.arrayBuffer();
+                const workbook = XLSX.read(data, { type: "array" });
+
+                const jsonData = XLSX.utils.sheet_to_json(workbook.Sheets[workbook.SheetNames[0]]);
+                console.log("✅ Excel Data Loaded:", jsonData);
+                return jsonData;
+            } catch (error) {
+                console.error("❌ Error loading Excel file:", error);
+                return [];
+            }
+        }
+
+        async function searchData() {
+            const searchInputs = [
+                { id: "searchInput1", column: "Faculty Emp ID" },
+                { id: "searchInput2", column: "Student University ID" },
+                { id: "searchInput3", column: "Year" },
+                { id: "searchInput4", column: "Course Code" },
+                { id: "searchInput5", column: "Course Bucket" },
+                { id: "searchInput6", column: "Semester" }
+            ];
+
+            const searchTerms = searchInputs.map(input => {
+                return {
+                    column: input.column,
+                    value: document.getElementById(input.id).value.toLowerCase().trim()
+                };
+            });
+
+            if (searchTerms.every(term => term.value === "")) {
+                document.getElementById("noSearchMessage").style.display = "block";
+                document.getElementById("dataTable").style.display = "none";
+                return;
+            }
+
+            document.getElementById("noSearchMessage").style.display = "none";
+
+            const jsonData = await fetchExcelData();
+            if (jsonData.length === 0) {
+                console.warn("⚠️ No data available.");
+                return;
+            }
+
+            const filteredData = jsonData.filter(row => {
+                return searchTerms.every(term => {
+                    if (term.value === "") return true;
+                    const cellValue = (row[term.column] || "").toString().toLowerCase();
+                    return cellValue.includes(term.value);
+                });
+            });
+
+            const table = document.getElementById("dataTable");
+            const tableHead = document.getElementById("tableHead");
+            const tableBody = document.getElementById("tableBody");
+
+            tableHead.innerHTML = "";
+            tableBody.innerHTML = "";
+
+            if (filteredData.length === 0) {
+                tableBody.innerHTML = "<tr><td colspan='100%'>No matching results found.</td></tr>";
+                table.style.display = "block";
+                return;
+            }
+
+            const headers = Object.keys(jsonData[0]);
+            headers.forEach(header => {
+                const th = document.createElement("th");
+                th.textContent = header;
+                tableHead.appendChild(th);
+            });
+
+            filteredData.forEach(row => {
+                const tr = document.createElement("tr");
+                let highlightRow = false;
+
+                headers.forEach(header => {
+                    const td = document.createElement("td");
+                    td.textContent = row[header];
+
+                    if (td.textContent.trim().toLowerCase() === "cgpa") {
+                        highlightRow = true;
+                    }
+
+                    tr.appendChild(td);
+                });
+
+                if (highlightRow) {
+                    tr.classList.add("highlight-row");
+                }
+
+                tableBody.appendChild(tr);
+            });
+
+            table.style.display = "block";
+        }
+    </script>
 </body>
 </html>
