--- a/index.html
+++ b/index.html
@@ -1,90 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Student Information</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.2/xlsx.full.min.js"></script>
-  <script src="script.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Information</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.2/xlsx.full.min.js"></script>
+    <script src="Y22script.js" defer></script>
 
-  <style>
-    body {
-      background-color: lightblue;
-      font-family: Arial, sans-serif;
-    }
-    .top-section {
-      text-align: center;
-      margin-top: 10px;
-    }
-    input[type="text"] {
-      padding: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      margin: 5px;
-    }
-    button {
-      padding: 7px 15px;
-      background-color: #28a745;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #218838;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    th, td {
-      border: 1px solid black;
-      padding: 10px;
-      text-align: left;
-    }
-    th {
-      background-color: #f2f2f2;
-      position: sticky;
-      top: 0;
-    }
-    .table-container {
-      max-height: 500px;
-      overflow-y: auto;
-      border: 1px solid #ddd;
-    }
-    .highlight-row {
-      background-color: yellow !important;
-    }
-  </style>
+    <style>
+        .top-section {
+            text-align: center;
+            margin-top: 10px;
+        }
+        input[type="text"] {
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            margin: 5px;
+        }
+        button {
+            padding: 7px 15px;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #218838;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+            position: sticky;
+            top: 0;
+        }
+        .table-container {
+            max-height: 500px;
+            overflow-y: auto;
+            border: 1px solid #ddd;
+        }
+        .highlight-row {
+            background-color: yellow !important;
+        }
+        body {
+            background-color: lightblue;
+            font-family: Arial, sans-serif;
+        }
+    </style>
 </head>
 <body>
-  <div class="top-section">
-    <h1>KLEF (Deemed to be University)</h1>
-    <h3>Department of Electronics and Communication Engineering</h3>
-    <h2>Student Information</h2>
-  </div>
+    <div class="top-section">
+        <h1>KLEF (Deemed to be University)</h1>
+        <h3>Department of Electronics and Communication Engineering</h3>
+        <h2>Student Information</h2>
+    </div>
+    <br>
+        <label for="searchInput1">Faculty Emp ID: </label>
+        <input type="text" id="searchInput1" placeholder="Enter first search term...">
+          <button onclick="searchData()">Search</button>
+    <br>
+       <br>  
+        <input type="text" id="searchInput2" placeholder="Enter Student University ID...">
+        <input type="text" id="searchInput3" placeholder="Enter Student Year...">
+        <input type="text" id="searchInput4" placeholder="Enter Course Code...">
+        <input type="text" id="searchInput5" placeholder="Enter Course Bucket...">
+        <input type="text" id="searchInput6" placeholder="Enter Semester...">
+        <button onclick="searchData()">Search</button>
+        <br>
+       
+    </div>
 
-  <br />
-  <label for="searchInput1">Faculty Emp ID: </label>
-  <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID" />
-  <br /><br />
-  <input type="text" id="searchInput2" placeholder="Enter Student University ID" />
-  <input type="text" id="searchInput3" placeholder="Enter Student Year" />
-  <input type="text" id="searchInput4" placeholder="Enter Course Code" />
-  <input type="text" id="searchInput5" placeholder="Enter Course Bucket" />
-  <input type="text" id="searchInput6" placeholder="Enter Semester" />
-  <button onclick="searchData()">Search</button>
-  <br /><br />
+    <br>
 
-  <p id="noSearchMessage" style="text-align: center;">Enter search terms to see results.</p>
+    <p id="noSearchMessage" style="text-align: center;">Enter search terms to see results.</p>
 
-  <div class="table-container">
-    <table id="dataTable" border="1" style="display: none;">
-      <thead>
-        <tr id="tableHead"></tr>
-      </thead>
-      <tbody id="tableBody"></tbody>
-    </table>
-  </div>
+    <div class="table-container">
+        <table id="dataTable" border="1" style="display: none;">
+            <thead>
+                <tr id="tableHead"></tr>
+            </thead>
+            <tbody id="tableBody"></tbody>
+        </table>
+    </div>
 </body>
 </html>
