--- a/index.html
+++ b/index.html
@@ -65,21 +65,17 @@
     </div>
     <br>
         <label for="searchInput1">Faculty Emp ID: </label>
-        <input type="text" id="searchInput1" placeholder="Enter first search term...">
-          <button onclick="searchData()">Search</button>
-    <br>
-       <br>  
-        <input type="text" id="searchInput2" placeholder="Enter Student University ID...">
-        <input type="text" id="searchInput3" placeholder="Enter Student Year...">
-        <input type="text" id="searchInput4" placeholder="Enter Course Code...">
-        <input type="text" id="searchInput5" placeholder="Enter Course Bucket...">
-        <input type="text" id="searchInput6" placeholder="Enter Semester...">
+        <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID">
         <button onclick="searchData()">Search</button>
-        <br>
-       
-    </div>
-
-    <br>
+    <br><br>
+        <input type="text" id="searchInput2" placeholder="Enter Student University ID">
+        <input type="text" id="searchInput3" placeholder="Enter Student Year">
+        <input type="text" id="searchInput4" placeholder="Enter Course Code">
+        <input type="text" id="searchInput5" placeholder="Enter Course Bucket">
+        <input type="text" id="searchInput6" placeholder="Enter Semester">
+        <input type="text" id="searchInput7" placeholder="Enter CGPA or any column">
+        <button onclick="searchData()">Search</button>
+    <br><br>
 
     <p id="noSearchMessage" style="text-align: center;">Enter search terms to see results.</p>
 
