--- a/index.html
+++ b/index.html
@@ -65,17 +65,15 @@
     </div>
     <br>
         <label for="searchInput1">Faculty Emp ID: </label>
-        <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID">
-        <button onclick="searchData()">Search</button>
-    <br><br>
-        <input type="text" id="searchInput2" placeholder="Enter Student University ID">
-        <input type="text" id="searchInput3" placeholder="Enter Student Year">
-        <input type="text" id="searchInput4" placeholder="Enter Course Code">
-        <input type="text" id="searchInput5" placeholder="Enter Course Bucket">
-        <input type="text" id="searchInput6" placeholder="Enter Semester">
-        <input type="text" id="searchInput7" placeholder="Enter CGPA or any column">
-        <button onclick="searchData()">Search</button>
-    <br><br>
+<input type="text" id="searchInput1" placeholder="Faculty Emp ID">
+<input type="text" id="searchInput2" placeholder="Student University ID">
+<input type="text" id="searchInput3" placeholder="Student Year">
+<input type="text" id="searchInput4" placeholder="Course Code">
+<input type="text" id="searchInput5" placeholder="Course Bucket">
+<input type="text" id="searchInput6" placeholder="Semester">
+<input type="text" id="searchInput7" placeholder="CGPA">
+<button onclick="searchData()">Search</button>
+ <br><br>
 
     <p id="noSearchMessage" style="text-align: center;">Enter search terms to see results.</p>
 
