--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
     <br>
 <label for="searchInput1">Faculty Emp ID: </label>
 <input type="text" id="searchInput1" placeholder="Faculty Emp ID">
+    <button onclick="searchData()">Search</button>
 <br><br>
 <input type="text" id="searchInput2" placeholder="Student University ID">
 <input type="text" id="searchInput3" placeholder="Student Year">
 <input type="text" id="searchInput4" placeholder="Course Code">
-<input type="text" id="searchInput5" placeholder="Course Bucket">
-<input type="text" id="searchInput6" placeholder="Semester">
-<input type="text" id="searchInput7" placeholder="CGPA">
+<input type="text" id="searchInput5" placeholder="Name of the Course">
+<input type="text" id="searchInput6" placeholder="Bucket">
+<input type="text" id="searchInput7" placeholder="Semester">
 <button onclick="searchData()">Search</button>
 
 <p id="noSearchMessage" style="text-align: center;">Enter search terms to see results.</p>
