--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     <h3>Department of Electronics and Communication Engineering</h3>
     <h2>Student Information</h2>
   </div>
-
+    <input type="text" id="searchInputGlobal" placeholder="🔍 Global search..." style="width: 50%; padding: 8px;">
+    <br><br>
+</div>
   <br>
   <label for="searchInput1">Faculty Emp ID:</label>
   <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID">
