--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
       background-color: lightblue;
       font-family: Arial, sans-serif;
     }
+
+  body {
+  background-image: url('https://raw.githubusercontent.com/sureshkoumar11/Y22_Student_Info/main/ece.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  font-family: Arial, sans-serif;
+}
   </style>
 </head>
 <body>
