--- a/index.html
+++ b/index.html
@@ -56,12 +56,20 @@
       font-family: Arial, sans-serif;
     }
 
-  body {
-  background-image: url('https://raw.githubusercontent.com/sureshkoumar11/Y22_Student_Info/main/ece.jpg');
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   font-family: Arial, sans-serif;
+}
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5); /* Black with 50% opacity */
+  min-height: 100vh; /* Full height of the screen */
+  padding: 20px;
+  color: white; /* Makes text visible over dark overlay */
 }
   </style>
 </head>
