--- a/index.html
+++ b/index.html
@@ -63,22 +63,19 @@ body {
   overflow: hidden;
 }
 
-.background-blur {
-  background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e');
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+                    url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e');
   background-size: cover;
   background-position: center;
-  filter: blur(8px) brightness(0.6); /* Adjust blur and darkness */
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+  background-repeat: no-repeat;
 }
 
-.content {
-  position: relative;
-  z-index: 1;
+.gradient-overlay {
+  min-height: 100vh;
   padding: 20px;
   color: white;
 }
