--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-                    url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e');
+  background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  font-family: Arial, sans-serif;
 }
 
-.gradient-overlay {
-  min-height: 100vh;
+.overlay {
+  background-color: rgba(0, 0, 0, 0.1); /* Black with 50% opacity */
+  min-height: 100vh; /* Full height of the screen */
   padding: 20px;
-  color: white;
+  color: white; /* Makes text visible over dark overlay */
 }
   </style>
 </head>
