--- a/index.html
+++ b/index.html
@@ -92,17 +92,16 @@ body {
   </div>
   <br>
   <label for="searchInput1">Faculty Emp ID:</label>
-  <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID">
+  <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID"style="width: 10%; padding: 8px;">
+  <input type="text" id="searchInput2" placeholder="Enter Student University... ID"style="width: 10%; padding: 8px;">
+  <input type="text" id="searchInput3" placeholder="Enter Student Year..."style="width: 10%; padding: 8px;">
+  <input type="text" id="searchInput4" placeholder="Enter Course Code..."style="width: 10%; padding: 8px;">
+  <input type="text" id="searchInput5" placeholder="Enter Name of the Course..."style="width: 10%; padding: 8px;">
+  <input type="text" id="searchInput6" placeholder="Enter Bucket..."style="width: 10%; padding: 8px;">
+  <button onclick="searchData()">Search</button>
+
   <input type="text" id="searchInputGlobal" placeholder="🔍 Global search..." style="width: 15%; padding: 8px;">
   <button onclick="searchData()">Search</button>
-  <br><br>
-  <input type="text" id="searchInput2" placeholder="Enter Student University ID">
-  <input type="text" id="searchInput3" placeholder="Enter Student Year">
-  <input type="text" id="searchInput4" placeholder="Enter Course Code">
-  <input type="text" id="searchInput5" placeholder="Enter Course Bucket">
-  <input type="text" id="searchInput6" placeholder="Enter Semester">
-  <button onclick="searchData()">Search</button>
- 
   <br><br>
 
   <p id="noSearchMessage" style="text-align: center;">Enter search terms to see results.</p>
