--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@ body {
   <input type="text" id="searchInput6" placeholder="Enter Bucket..."style="width: 10%; padding: 8px;">
   <button onclick="searchData()">Search</button>
 
-  <input type="text" id="searchInputGlobal" placeholder="🔍 Global search..." style="width: 15%; padding: 8px;">
+  <label for="searchInput1">Search Anydetails:</label>
+  <input type="text" id="searchInputGlobal" placeholder="🔍 Global search..." style="width: 45%; padding: 8px;">
   <button onclick="searchData()">Search</button>
   <br><br>
 
