--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     .top-section {
       text-align: center;
       margin-top: 30px;
+<style>
+  .top-section h1 {
+    font-size: 40px;
+  }
+
+  .top-section h2 {
+    font-size: 32px;
+  }
+
+  .top-section h3 {
+    font-size: 24px;
+  }
+</style>
+      
     }
     input[type="text"] {
       padding: 5px;
