--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       margin-top: 30px;
 
   .top-section h1 {
-    font-size: 40px;
+    font-size: 80px;
   }
 
   .top-section h2 {
@@ -21,9 +21,13 @@
   }
 
   .top-section h3 {
-    font-size: 24px;
+    font-size: 50px;
   }
-
+.top-section h1,
+.top-section h2,
+.top-section h3 {
+  line-height: 0.9;
+}
       
     }
     input[type="text"] {
