--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 .top-section h1,
 .top-section h2,
 .top-section h3 {
-  line-height: 0.9;
+  line-height: 0.2;
 }
       
     }
@@ -84,7 +84,7 @@ body {
 body {
   margin: 0;
   padding: 0;
-  background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e');
+  background-image: url('https://raw.githubusercontent.com/sureshkoumar11/Y22_Student_Info/main/ece.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
