--- a/index.html
+++ b/index.html
@@ -23,15 +23,10 @@
   .top-section h3 {
     font-size: 50px;
   }
-.top-section h1,
-.top-section h2,
-.top-section h3 {
-  line-height: 0.2;
-}
       
     }
     input[type="text"] {
-      padding: 5px;
+      padding: 25px;
       border: 1px solid #ccc;
       border-radius: 4px;
       margin: 5px;
@@ -84,7 +79,7 @@ body {
 body {
   margin: 0;
   padding: 0;
-  background-image: url('https://raw.githubusercontent.com/sureshkoumar11/Y22_Student_Info/main/ece.jpg');
+  background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
