--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   <script src="Y22script.js" defer></script>
 
   <style>
-   .top-section h1 {
-    font-size: 80px;
-  }
+.top-section {
+  text-align: center;
+  margin-top: 30px;
+}
 
-  .top-section h2 {
-    font-size: 32px;
-  }
-
-  .top-section h3 {
-    font-size: 50px;
-  }
-      
+.top-section h1 {
+  font-size: 50px; /* You can change this to any size you want */
+}
+.top-section h2 {
+  font-size: 38px;
+}
+.top-section h3 {
+  font-size: 30px;
+}   
     }
     input[type="text"] {
       padding: 25px;
@@ -86,7 +88,7 @@ body {
   max-height: 500px;
   overflow-y: auto;
   border: 1px solid #ddd;
-  background-color: rgba(195, 195, 195, 0.5); /* semi-transparent white */
+  background-color: rgba(225, 225, 225, 0.3); /* semi-transparent white */
   backdrop-filter: blur(5px); /* Optional: blur background behind the table */
   padding: 10px;
   border-radius: 8px;
