--- a/index.html
+++ b/index.html
@@ -103,14 +103,15 @@ body {
   </div>
   <br>
   <label for="searchInput1">Faculty Emp ID:</label>
-  <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID"style="width: 20%; padding: 8px;">
-  <input type="text" id="searchInput2" placeholder="Enter Student University... ID"style="width: 10%; padding: 8px;">
-  <input type="text" id="searchInput3" placeholder="Enter Student Year..."style="width: 10%; padding: 8px;">
-  <input type="text" id="searchInput4" placeholder="Enter Course Code..."style="width: 10%; padding: 8px;">
-  <input type="text" id="searchInput5" placeholder="Enter Name of the Course..."style="width: 10%; padding: 8px;">
-  <input type="text" id="searchInput6" placeholder="Enter Bucket..."style="width: 10%; padding: 8px;">
+  <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID"style="width: 15%; padding: 10px;">
+  <input type="text" id="searchInput2" placeholder="Enter Student University... ID"style="width: 15%; padding: 10px;">
+  <input type="text" id="searchInput3" placeholder="Enter Student Year..."style="width: 15%; padding: 10px;">
+  <input type="text" id="searchInput4" placeholder="Enter Course Code..."style="width: 15%; padding: 10px;">
+  <input type="text" id="searchInput5" placeholder="Enter Name of the Course..."style="width: 15%; padding: 10px;">
+  <input type="text" id="searchInput6" placeholder="Enter Bucket..."style="width: 15%; padding: 10px;">
   <button onclick="searchData()">Search</button>
  <br>
+  <div style="text-align: center;">
   <label for="searchInput1">Search Anydetails:</label>
   <input type="text" id="searchInputGlobal" placeholder="🔍 Global search..." style="width: 45%; padding: 8px;">
   <button onclick="searchData()">Search</button>
