--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body {
     <h2>Student Information</h2>
   </div>
   <br>
-  <label for="searchInput1">Faculty Emp ID:</label>
+  <label for="searchInput1" style="font-size: 20px;">Faculty Emp ID:</label>
   <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID"style="width: 15%; padding: 10px;">
   <input type="text" id="searchInput2" placeholder="Enter Student University... ID"style="width: 15%; padding: 10px;">
   <input type="text" id="searchInput3" placeholder="Enter Student Year..."style="width: 15%; padding: 10px;">
@@ -112,7 +112,7 @@ body {
   <button onclick="searchData()">Search</button>
  <br>
   <div style="text-align: center;">
-  <label for="searchInput1">Search Anydetails:</label>
+  <label for="searchInput1" style="font-size: 20px;">Search Anydetails:</label>
   <input type="text" id="searchInputGlobal" placeholder="🔍 Global search..." style="width: 45%; padding: 8px;">
   <button onclick="searchData()">Search</button>
  <br>
