--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
   <script src="Y22script.js" defer></script>
 
   <style>
-.top-section {
-  text-align: center;
-  margin-top: 0.2px;
-}
+    .top-section {
+      text-align: center;
+      margin-top: 30px;
 
-.top-section h1 {
-  font-size: 50px; /* You can change this to any size you want */
-}
-.top-section h2 {
-  font-size: 38px;
-}
-.top-section h3 {
-  font-size: 30px;
-}   
+  .top-section h1 {
+    font-size: 80px;
+  }
+
+  .top-section h2 {
+    font-size: 32px;
+  }
+
+  .top-section h3 {
+    font-size: 50px;
+  }
+      
     }
     input[type="text"] {
       padding: 25px;
       border: 1px solid #ccc;
-      border-radius: 5px;
+      border-radius: 4px;
       margin: 5px;
     }
     button {
@@ -88,7 +90,7 @@ body {
   max-height: 500px;
   overflow-y: auto;
   border: 1px solid #ddd;
-  background-color: rgba(225, 225, 225, 0.1); /* semi-transparent white */
+  background-color: rgba(195, 195, 195, 0.5); /* semi-transparent white */
   backdrop-filter: blur(5px); /* Optional: blur background behind the table */
   padding: 10px;
   border-radius: 8px;
@@ -102,18 +104,17 @@ body {
     <h2>Student Information</h2>
   </div>
   <br>
-  <label for="searchInput1" style="font-size: 30px;">Faculty Emp ID:</label>
-  <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID"style="width: 10%; padding: 20px;">
-  <input type="text" id="searchInput2" placeholder="Enter Student University... ID"style="width: 10%; padding: 20px;">
-  <input type="text" id="searchInput3" placeholder="Enter Student Year..."style="width: 10%; padding: 20px;">
-  <input type="text" id="searchInput4" placeholder="Enter Course Code..."style="width: 10%; padding: 20px;">
-  <input type="text" id="searchInput5" placeholder="Enter Name of the Course..."style="width: 10%; padding: 20px;">
-  <input type="text" id="searchInput6" placeholder="Enter Bucket..."style="width: 10%; padding: 20px;">
+  <label for="searchInput1">Faculty Emp ID:</label>
+  <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID"style="width: 10%; padding: 8px;">
+  <input type="text" id="searchInput2" placeholder="Enter Student University... ID"style="width: 10%; padding: 8px;">
+  <input type="text" id="searchInput3" placeholder="Enter Student Year..."style="width: 10%; padding: 8px;">
+  <input type="text" id="searchInput4" placeholder="Enter Course Code..."style="width: 10%; padding: 8px;">
+  <input type="text" id="searchInput5" placeholder="Enter Name of the Course..."style="width: 10%; padding: 8px;">
+  <input type="text" id="searchInput6" placeholder="Enter Bucket..."style="width: 10%; padding: 8px;">
   <button onclick="searchData()">Search</button>
  <br>
-  <div style="text-align: center;">
-  <label for="searchInput1" style="font-size: 30px;">Search Anydetails:</label>
-  <input type="text" id="searchInputGlobal" placeholder="🔍 Global search..." style="width: 45%; padding: 20px;">
+  <label for="searchInput1">Search Anydetails:</label>
+  <input type="text" id="searchInputGlobal" placeholder="🔍 Global search..." style="width: 45%; padding: 8px;">
   <button onclick="searchData()">Search</button>
  <br>
 
