--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@ body {
     <h2>Student Information</h2>
   </div>
   <br>
-  <label for="searchInput1" style="font-size: 15px;">Faculty Emp ID:</label>
-    <label for="searchInput1">Faculty Emp ID:</label>
+  <label for="searchInput1" style="font-size: 15px; font-weight: bold;">Faculty Emp ID:</label>
   <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID"style="width: 10%; padding: 10px;">
   <input type="text" id="searchInput2" placeholder="Enter Student University... ID"style="width: 10%; padding: 8px;">
   <input type="text" id="searchInput3" placeholder="Enter Student Year..."style="width: 10%; padding: 8px;">
@@ -114,7 +113,7 @@ body {
   <input type="text" id="searchInput6" placeholder="Enter Bucket..."style="width: 10%; padding: 8px;">
   <button onclick="searchData()">Search</button>
  <br>
-  <label for="searchInput1" style="font-size: 15px;">Search Anydetails:</label>
+  <label for="searchInput1" style="font-size: 15px; font-weight: bold;">Search Anydetails:</label>
   <input type="text" id="searchInputGlobal" placeholder="🔍 Global search..." style="width: 45%; padding: 8px;">
   <button onclick="searchData()">Search</button>
  <br>
