--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
       text-align: center;
       margin-top: 30px;
 
-  .top-section h1 {
-    font-size: 80px;
-  }
+.top-section h1 {
+  font-size: 50px;
+  margin-bottom: 5px;
+}
 
-  .top-section h2 {
-    font-size: 32px;
-  }
+.top-section h3 {
+  font-size: 30px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
 
-  .top-section h3 {
-    font-size: 50px;
-  }
-      
+.top-section h2 {
+  font-size: 38px;
+  margin-top: 5px;
+}
+   
     }
     input[type="text"] {
       padding: 25px;
@@ -104,7 +108,7 @@ body {
     <h2>Student Information</h2>
   </div>
   <br>
-  <label for="searchInput1" style="font-size: 15px; font-weight: bold;">Faculty Emp ID:</label>
+  <label for="searchInput1" style="font-size: 20px; font-weight: bold;">Faculty Emp ID:</label>
   <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID"style="width: 10%; padding: 10px;">
   <input type="text" id="searchInput2" placeholder="Enter Student University... ID"style="width: 10%; padding: 8px;">
   <input type="text" id="searchInput3" placeholder="Enter Student Year..."style="width: 10%; padding: 8px;">
@@ -113,7 +117,7 @@ body {
   <input type="text" id="searchInput6" placeholder="Enter Bucket..."style="width: 10%; padding: 8px;">
   <button onclick="searchData()">Search</button>
  <br>
-  <label for="searchInput1" style="font-size: 15px; font-weight: bold;">Search Anydetails:</label>
+  <label for="searchInput1" style="font-size: 20px; font-weight: bold;">Search Anydetails:</label>
   <input type="text" id="searchInputGlobal" placeholder="🔍 Global search..." style="width: 45%; padding: 8px;">
   <button onclick="searchData()">Search</button>
  <br>
