--- a/one.html
+++ b/one.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Welcome to My Website</h1>
-  <a href="about.html">Go to About Page</a>
+  <a href="index.html">Go to About Page</a>
 </body>
 </html>
