--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ body {
     <h3>Department of Electronics and Communication Engineering</h3>
     <h2>Student Information</h2>
   </div>
+  <a href="one.html">Go to About Page</a>
   <br>
   <label for="searchInput1" style="font-size: 20px; font-weight: bold;">Faculty Emp ID:</label>
   <input type="text" id="searchInput1" placeholder="Enter Faculty Emp ID"style="width: 10%; padding: 10px;">
